fix-non-tm-design & piplene-align

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -1939,7 +1939,7 @@ body .vertical-collpsed span .logo-sm image {
 
 .carousel {
     display: flex;
-    padding: 20px;
+    /* padding: 20px; */
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -1952,7 +1952,7 @@ body .vertical-collpsed span .logo-sm image {
     width: 100%;
 
     /* layoutCardsShadow */
-    box-shadow: 0px 2px 10px 0px #cecece;
+    /* box-shadow: 0px 2px 10px 0px #cecece; */
 }
 
 .corausal-req-text {
@@ -2089,7 +2089,7 @@ body .vertical-collpsed span .logo-sm image {
 
 .carousel-indicators {
     bottom: 20px;
-    margin-bottom: -1rem;
+    margin-bottom: -3rem;
     justify-content: space-between;
 }
 
@@ -3487,3 +3487,20 @@ input[type="button"]:hover {
 .sticky-col.sticky-header {
     z-index: 3; 
 } */
+
+@media (max-width: 767px) {
+  .prev_btn, .next_btn{
+    display: none;
+  }
+
+}
+
+
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .carausel-custom {
+      width: 83.3333%; /* Adjust if needed for specific margins/padding */
+    }
+  }
+
